@@ -1,3 +1,9 @@
+[b]Version 0.8.2[/b]:
+
+(2012-09-21)
+ * Add the option "Report MPlayer crashes" in Preferences -> Advanced.
+
+
 [b]Version 0.8.1[/b]:
 
 (2012-09-14)
